--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <img src="img/7_175365.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <button type="button" class="btn btn-primary w-100">casamientos</button>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
