--- a/index.html
+++ b/index.html
@@ -128,28 +128,28 @@
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/a7ed1390bc2e569c0575623d76c356a8.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
-                    <button type="button" class="btn btn-primary w-100">15 años</button>
+                    <a href="15años.html.html" class="btn btn-primary w-10">15 años</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/casamiento-rosario-fiesta-mejor-fotografo-de-boda-argentina-erika-fayolle.jpg-papelitos.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <button type="button" class="btn btn-primary w-100">cumpleaños</button>
+                    <a href="cumpleaños.html" class="btn btn-primary w-100">cumpleaños</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/7_175365.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="nosotros.html" class="btn btn-primary w-100">casamientos</a>
+                    <a href="casamientos.html" class="btn btn-primary w-100">casamientos</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/r10_2x_16_56302.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <button type="button" class="btn btn-primary w-100">fiestas</button>
+                    <a href="fiestas.html" class="btn btn-primary w-100">fiestas</a>
                 </article>
 
             </div>
