--- a/productos/fiestas.html
+++ b/productos/fiestas.html
@@ -5,30 +5,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-midth, initial-scale=1.0">
     <title>onix cotillon </title>
-    <meta name="description" content="productos de cotillon y reposteria">
-    <meta name="keywords" content="reposteria,cotillon,disfraces,velas-bengalas, decoracion,globos,descartables">
-    <meta name="author" content="ahumada agustin">
     <link rel="stylesheet" href="css/estilo-a.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="superior">
-        envios gratis a partir de $5000</div>
+    <div class="scale1">
+        envios gratis a partir de $5000
 
 
 
+    </div>
+    <div class="scale2">
+        25 de mayo 140-la falda-cordoba -tel:738847492
 
-    <div class="superiorb">
 
-        25 de mayo 140-la falda-cordoba -tel:738847492</div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -46,8 +44,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              comprar
-            </a>
+                  comprar
+                </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
                                 <a class="dropdown-item" href=""> </a>
@@ -96,7 +94,9 @@
             <li>
                 <a href="globos.html">globos </a>
             </li>
-
+            <li>
+                <a href="golosinas.html">golosinas</a>
+            </li>
             <li>
                 <a href="importacion.html">importacion</a>
             </li>
@@ -108,53 +108,8 @@
         </ul>
 
     </nav>
-    <div class="produ">
-        <h4 class="produ__destacados--color">seccion productos:
-
-        </h4>
-        <h4> destacados
-
-        </h4>
-
-    </div>
-    <section>
-        <div class="container-fluid py-5">
-            <h1 class="text-center"></h1>
-            <div class="row">
-                <article class="col-lg-3 col-md-6 mb-2">
-                    <img src="img/reposteria-imagen-destacada-1.jpg" alt="" class="w-100 img-thumbnail">
-                    <h3 class="text-start"></h3>
-                    <a href="reposteria.html" class="btn btn-primary w-100">reposteria</a>
-                </article>
-
-                <article class="col-lg-3 col-md-6 mb-2">
-                    <img src="img/disfraz-casero-pirata.jpg" alt="" class="w-100 img-thumbnail">
-                    <h3 class="text-start"></h3>
-
-                    <a href="disfraces.html" class="btn btn-primary w-100">disfraces</a>
-                </article>
-
-                <article class="col-lg-3 col-md-6 mb-2">
-                    <img src="img/D_NQ_NP_765237-MLA43611786623_092020-O.jpg" alt="" class="w-100 img-thumbnail">
-                    <h3 class="text-start"></h3>
-
-                    <a href="velas-bengalas.html" class="btn btn-primary w-100">velas</a>
-                </article>
-
-                <article class="col-lg-3 col-md-6 mb-2">
-                    <img src="img/71ee775H1RL._AC_SS450_.jpg" alt="" class="w-100 img-thumbnail">
-                    <h3 class="text-start"></h3>
-
-                    <a href="decoracion.html" class="btn btn-primary w-100">decoracion</a>
-                </article>
-
-            </div>
-        </div>
-    </section>
-    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
 
 
-    <br>
 
 
 
