--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/a7ed1390bc2e569c0575623d76c356a8.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
-                    <a href="15años.html.html" class="btn btn-primary w-10">15 años</a>
+                    <a href="15años.html" class="btn btn-primary w-100">15 años</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
