--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/r10_2x_16_56302.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
+                    <li>
 
-                    <a href="fiestas.html" class="btn btn-primary w-100">fiestas</a>
+                    <a href="fiestas.html" class="btn btn-primary w-100">fiestas</a></li>
                 </article>
 
             </div>
