--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <h3 class="text-start"></h3>
                     <li>
 
-                    <a href="fiestas.html" class="btn btn-primary w-100">fiestas</a></li>
+                        <a href="productos/fiestas.html" class="btn btn-primary w-100">fiestas</a></li>
                 </article>
 
             </div>
