--- a/productos.html
+++ b/productos.html
@@ -76,32 +76,32 @@
         <ul id="botonera2">
 
             <li>
-                <a href="cotillon-carioca.html">cotillon carioca </a>
+                <a href="productos/cotillon-carioca.html">cotillon carioca </a>
             </li>
             <li>
-                <a href="disfraces.html">disfraces </a>
+                <a href="productos/disfraces.html">disfraces </a>
             </li>
             <li>
-                <a href="reposteria.html">reposteria </a>
+                <a href="productos/reposteria.html">reposteria </a>
             </li>
             <li>
-                <a href="cotillon-infantil.html">cotillon infantil </a>
+                <a href="productos/cotillon-infantil.html">cotillon infantil </a>
             </li>
             <li>
-                <a href="velas-bengalas.html">velas y bengalas </a>
+                <a href="productos/velas-bengalas.html">velas y bengalas </a>
             </li>
             <li>
-                <a href="decoracion.html">decoracion </a>
+                <a href="productos/decoracion.html">decoracion </a>
             </li>
             <li>
-                <a href="globos.html">globos </a>
+                <a href="productos/globos.html">globos </a>
             </li>
 
             <li>
-                <a href="importacion.html">importacion</a>
+                <a href="productos/importacion.html">importacion</a>
             </li>
             <li>
-                <a href="descartables.html">descartables </a>
+                <a href="productos/descartables.html">descartables </a>
             </li>
 
 
@@ -124,28 +124,28 @@
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/reposteria-imagen-destacada-1.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
-                    <a href="reposteria.html" class="btn btn-primary w-100">reposteria</a>
+                    <a href="productos/reposteria.html" class="btn btn-primary w-100">reposteria</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/disfraz-casero-pirata.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="disfraces.html" class="btn btn-primary w-100">disfraces</a>
+                    <a href="productos/disfraces.html" class="btn btn-primary w-100">disfraces</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/D_NQ_NP_765237-MLA43611786623_092020-O.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="velas-bengalas.html" class="btn btn-primary w-100">velas</a>
+                    <a href="productos/velas-bengalas.html" class="btn btn-primary w-100">velas</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/71ee775H1RL._AC_SS450_.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="decoracion.html" class="btn btn-primary w-100">decoracion</a>
+                    <a href="productos/decoracion.html" class="btn btn-primary w-100">decoracion</a>
                 </article>
 
             </div>
