--- a/index.html
+++ b/index.html
@@ -128,29 +128,29 @@
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/a7ed1390bc2e569c0575623d76c356a8.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
-                    <a href="15años.html" class="btn btn-primary w-100">15 años</a>
+                    <a href="productos/15años.html" class="btn btn-primary w-100">15 años</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/casamiento-rosario-fiesta-mejor-fotografo-de-boda-argentina-erika-fayolle.jpg-papelitos.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="cumpleaños.html" class="btn btn-primary w-100">cumpleaños</a>
+                    <a href="productos/cumpleaños.html" class="btn btn-primary w-100">cumpleaños</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/7_175365.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
 
-                    <a href="casamientos.html" class="btn btn-primary w-100">casamientos</a>
+                    <a href="productos/casamientos.html" class="btn btn-primary w-100">casamientos</a>
                 </article>
 
                 <article class="col-lg-3 col-md-6 mb-2">
                     <img src="img/r10_2x_16_56302.jpg" alt="" class="w-100 img-thumbnail">
                     <h3 class="text-start"></h3>
-                    <li>
 
-                        <a href="productos/fiestas.html" class="btn btn-primary w-100">fiestas</a></li>
+
+                    <a href="productos/fiestas.html" class="btn btn-primary w-100">fiestas</a>
                 </article>
 
             </div>
