--- a/productos/reposteria.html
+++ b/productos/reposteria.html
@@ -5,29 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-midth, initial-scale=1.0">
     <title>onix cotillon </title>
+    <meta name="description" content="productos de cotillon y reposteria">
+    <meta name="keywords" content="reposteria,cotillon,disfraces,velas-bengalas, decoracion,globos,descartables">
+    <meta name="author" content="ahumada agustin">
     <link rel="stylesheet" href="css/estilo-a.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="superior">
-
-        <div class="superior__envio">
-            envios gratis a partir de $5000</div>
+        envios gratis a partir de $5000</div>
 
 
 
 
-        <div class="superior__direccion">
-            25 de mayo 140-la falda-cordoba -tel:738847492</div>
+    <div class="superiorb">
 
-    </div>
+        25 de mayo 140-la falda-cordoba -tel:738847492</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
+            <div class="icon-lang"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -45,8 +46,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  comprar
-                </a>
+              comprar
+            </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
                                 <a class="dropdown-item" href=""> </a>
@@ -68,6 +69,7 @@
         </div>
 
     </nav>
+
     <nav>
 
 
@@ -94,9 +96,7 @@
             <li>
                 <a href="globos.html">globos </a>
             </li>
-            <li>
-                <a href="golosinas.html">golosinas</a>
-            </li>
+
             <li>
                 <a href="importacion.html">importacion</a>
             </li>
@@ -108,4 +108,16 @@
         </ul>
 
     </nav>
+
+
+    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+
+
+    <br>
+
+
+
+
 </body>
+
+</html>
