--- a/productos/disfraces.html
+++ b/productos/disfraces.html
@@ -8,7 +8,7 @@
     <meta name="description" content="productos de cotillon y reposteria">
     <meta name="keywords" content="reposteria,cotillon,disfraces,velas-bengalas, decoracion,globos,descartables">
     <meta name="author" content="ahumada agustin">
-    <link rel="stylesheet" href="css/estilo-a.css">
+    <link rel="stylesheet" href="../css/estilo-a.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -110,7 +110,8 @@
     </nav>
 
 
-    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+    <div class="iconowp">
+        <a href="https://api.whatsapp.com/send?phone=+543548595347" img src="/img/whatsapp.png" alt=""></a> > </div>
 
 
     <br>
