--- a/productos/disfraces.html
+++ b/productos/disfraces.html
@@ -8,7 +8,7 @@
     <meta name="description" content="productos de cotillon y reposteria">
     <meta name="keywords" content="reposteria,cotillon,disfraces,velas-bengalas, decoracion,globos,descartables">
     <meta name="author" content="ahumada agustin">
-    <link rel="stylesheet" href="../css/estilo-a.css">
+    <link rel="stylesheet" href="css/estilo-a.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -24,7 +24,7 @@
         25 de mayo 140-la falda-cordoba -tel:738847492</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
             <div class="icon-lang"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -76,42 +76,82 @@
         <ul id="botonera2">
 
             <li>
-                <a href="cotillon-carioca.html">cotillon carioca </a>
+                <a href="productos/cotillon-carioca.html">cotillon carioca </a>
             </li>
             <li>
-                <a href="disfraces.html">disfraces </a>
+                <a href="productos/disfraces.html">disfraces </a>
             </li>
             <li>
-                <a href="reposteria.html">reposteria </a>
+                <a href="productos/reposteria.html">reposteria </a>
             </li>
             <li>
-                <a href="cotillon-infantil.html">cotillon infantil </a>
+                <a href="productos/cotillon-infantil.html">cotillon infantil </a>
             </li>
             <li>
-                <a href="velas-bengalas.html">velas y bengalas </a>
+                <a href="productos/velas-bengalas.html">velas y bengalas </a>
             </li>
             <li>
-                <a href="decoracion.html">decoracion </a>
+                <a href="productos/decoracion.html">decoracion </a>
             </li>
             <li>
-                <a href="globos.html">globos </a>
+                <a href="productos/globos.html">globos </a>
             </li>
 
             <li>
-                <a href="importacion.html">importacion</a>
+                <a href="productos/importacion.html">importacion</a>
             </li>
             <li>
-                <a href="descartables.html">descartables </a>
+                <a href="productos/descartables.html">descartables </a>
             </li>
 
 
         </ul>
 
     </nav>
+    <div class="produ">
+        <h4 class="produ__destacados--color">seccion productos:
 
+        </h4>
+        <h4> destacados
 
-    <div class="iconowp">
-        <a href="https://api.whatsapp.com/send?phone=+543548595347" img src="/img/whatsapp.png" alt=""></a> > </div>
+        </h4>
+
+    </div>
+    <section>
+        <div class="container-fluid py-5">
+            <h1 class="text-center"></h1>
+            <div class="row">
+                <article class="col-lg-3 col-md-6 mb-2">
+                    <img src="img/reposteria-imagen-destacada-1.jpg" alt="" class="w-100 img-thumbnail">
+                    <h3 class="text-start"></h3>
+                    <a href="productos/reposteria.html" class="btn btn-primary w-100">reposteria</a>
+                </article>
+
+                <article class="col-lg-3 col-md-6 mb-2">
+                    <img src="img/disfraz-casero-pirata.jpg" alt="" class="w-100 img-thumbnail">
+                    <h3 class="text-start"></h3>
+
+                    <a href="productos/disfraces.html" class="btn btn-primary w-100">disfraces</a>
+                </article>
+
+                <article class="col-lg-3 col-md-6 mb-2">
+                    <img src="img/D_NQ_NP_765237-MLA43611786623_092020-O.jpg" alt="" class="w-100 img-thumbnail">
+                    <h3 class="text-start"></h3>
+
+                    <a href="productos/velas-bengalas.html" class="btn btn-primary w-100">velas</a>
+                </article>
+
+                <article class="col-lg-3 col-md-6 mb-2">
+                    <img src="img/71ee775H1RL._AC_SS450_.jpg" alt="" class="w-100 img-thumbnail">
+                    <h3 class="text-start"></h3>
+
+                    <a href="productos/decoracion.html" class="btn btn-primary w-100">decoracion</a>
+                </article>
+
+            </div>
+        </div>
+    </section>
+    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
 
 
     <br>
