--- a/contacto.html
+++ b/contacto.html
@@ -93,7 +93,10 @@
                         <button type="submit" class="btn btn-warning w-100">entrar</button>
                     </form>
                 </article>
-                <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+                <div class="iconowp">
+                    <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+                    </a>
+                </div>
 
 
                 <br>
