--- a/home.html
+++ b/home.html
@@ -163,7 +163,10 @@
         Carnaval carioca, Globos, Descartables, Disfraces, Manualidades, Halloween, Navidad, etc. En nuestros locales de venta exclusiva para comercios encontrará las últimas tendencias mundiales, productos exclusivos y el mayor surtido de productos nacionales
         e importados con el objetivo de satisfacer todas sus necesidades, manteniendo la atención y servicio en todo momento.
 
-        <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+        <div class="iconowp">
+            <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+            </a>
+        </div>
 
 
         <div class="container__footer">
