--- a/productos.html
+++ b/productos.html
@@ -151,8 +151,10 @@
             </div>
         </div>
     </section>
-    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
-
+    <div class="iconowp">
+        <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+        </a>
+    </div>
 
     <br>
 
