--- a/productos/velas-bengalas.html
+++ b/productos/velas-bengalas.html
@@ -110,7 +110,10 @@
     </nav>
 
 
-    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+    <div class="iconowp">
+        <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+        </a>
+    </div>
 
 
     <br>
