--- a/nosotros.html
+++ b/nosotros.html
@@ -86,7 +86,10 @@
 
 
 
-        <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
+        <div class="iconowp">
+            <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+            </a>
+        </div>
 
 
         <br>
