--- a/productos/casamientos.html
+++ b/productos/casamientos.html
@@ -110,8 +110,11 @@
     </nav>
 
 
-    <div class="iconowp"> <img src="/img/whatsapp.png" alt=""> </div>
 
+    <div class="iconowp">
+        <a href="https://api.whatsapp.com/send?phone=+543548595347"> <img src="/img/whatsapp.png" alt="">
+        </a>
+    </div>
 
     <br>
 
