--- a/productos/velas-bengalas.html
+++ b/productos/velas-bengalas.html
@@ -113,38 +113,95 @@
             <div class="card h-100">
                 <img src="/img/velas/0820151814093.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">bengala con brillo</h5>
+
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
+
             </div>
         </div>
         <div class="col">
             <div class="card h-100">
                 <img src="/img/velas/820151814116.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">bengala con brillo</h5>
+
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
+
             </div>
         </div>
         <div class="col">
             <div class="card h-100">
                 <img src="/img/velas/0820151814123.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <h5 class="card-title">bengala con brillo </h5>
+
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
+
             </div>
         </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/VF015RJ.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/VF015TQ.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/VF015BL.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/VF015FC.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/VF015PL.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/velas/.VF015VTjpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
     </div>
 
 
