--- a/productos/velas-bengalas.html
+++ b/productos/velas-bengalas.html
@@ -175,7 +175,7 @@
             <div class="card h-100">
                 <img src="/img/velas/AL003CE.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela </h5>
+                    <h5 class="card-title">vela con brillo </h5>
 
                 </div>
 
@@ -183,9 +183,9 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003CEFC.jpg" class="card-img-top" alt="...">
+                <img src="/img/velas/AL003FC.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela </h5>
+                    <h5 class="card-title">vela con brillo </h5>
 
                 </div>
 
@@ -195,7 +195,7 @@
             <div class="card h-100">
                 <img src="/img/velas/AL003NE.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela </h5>
+                    <h5 class="card-title">vela con brillo</h5>
 
                 </div>
 
@@ -205,7 +205,7 @@
             <div class="card h-100">
                 <img src="/img/velas/AL003PL.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela </h5>
+                    <h5 class="card-title">vela con brillo </h5>
 
                 </div>
 
@@ -215,7 +215,7 @@
             <div class="card h-100">
                 <img src="/img/velas/AL003VT.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela </h5>
+                    <h5 class="card-title">vela con brillo </h5>
 
                 </div>
 
