--- a/productos/cotillon-carioca.html
+++ b/productos/cotillon-carioca.html
@@ -153,7 +153,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/VF015PL.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/2371876010607.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">bengala con brillo </h5>
 
@@ -163,7 +163,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/VF015VT.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/CAK2251.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">bengala con brillo </h5>
 
@@ -173,7 +173,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003CE.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/CAK4062.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">vela con brillo </h5>
 
@@ -183,7 +183,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003FC.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/CAK6052.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">vela con brillo </h5>
 
