--- a/productos/cotillon-carioca.html
+++ b/productos/cotillon-carioca.html
@@ -193,7 +193,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003NE.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/GB102.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">vela con brillo</h5>
 
@@ -203,7 +203,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003PL.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/ROT582.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">vela con brillo </h5>
 
@@ -213,7 +213,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/AL003VT.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/AR065.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">vela con brillo </h5>
 
@@ -221,6 +221,17 @@
 
             </div>
         </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/carioca/2371876060022.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
 
 
 
