--- a/productos/disfraces.html
+++ b/productos/disfraces.html
@@ -108,6 +108,96 @@
         </ul>
 
     </nav>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147815238.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147810103.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147810950.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147813999.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147815214.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147814309.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147815191.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/disfraces/7798147816198.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo</h5>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
 
 
