--- a/productos/reposteria.html
+++ b/productos/reposteria.html
@@ -108,6 +108,116 @@
         </ul>
 
     </nav>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798288880171.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798105126055.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798705129098.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798705129104.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798100464145.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798100464138.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7798100464121.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7795933203170.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo</h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7795933202067.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo</h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/reposteria/7795933000557.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo</h5>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
 
 
