--- a/productos/decoracion.html
+++ b/productos/decoracion.html
@@ -108,6 +108,145 @@
         </ul>
 
     </nav>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006187.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006279.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006361.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006378.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006385.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/7799051006514.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060AZ.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060FC.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060OR.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo</h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060PL.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060RJ.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/carioca/2371876060022.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/decoracion/JC060RS.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
 
 
